--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li>huu, hu__hu</li>
       <li>Since 1996/12/2〜</li>
       <li>大学生</li>
-      <li>Pythonを主に使用する</li>
+      <li>エンジニアのバイトをしている</li>
       <li>自然言語処理, 機械学習, 画像認識などに興味がある</li>
     </ul>
     
