--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     
     <h1>諸リンク</h1>
     <ul>
-      <li><a href="https://twitter.com/hu__huu">Twitter</a></li>
+      <li><a href="https://twitter.com/_hu__hu">Twitter</a></li>
       <li><a href="http://huhu.hatenablog.com">ブログ</a></li>
       <li><a href="http://github.com/huu12">Github</a></li>
-      <li><a href="https://twitter.com/intent/tweet?text=@hu__huu%20Facebook%E3%81%AE%E3%82%A2%E3%82%AB%E3%82%A6%E3%83%B3%E3%83%88%E6%95%99%E3%81%88%E3%81%A6%E4%B8%8B%E3%81%95%E3%81%84">Facebook</a></li>
     </ul>
   </body>
 </html>
