ちょっと修正

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <h1>huu(hu__hu)について</h1>
     <ul>
       <li>huu, hu__hu</li>
-      <li>Since 1996/12/2〜</li>
-      <li>大学生</li>
-      <li>エンジニアのバイトをしている</li>
-      <li>自然言語処理, 機械学習, 画像認識などに興味がある</li>
+      <li>平成8年12月2日生まれ</li>
+      <li>情報工学科の大学生</li>
+      <li>機械学習系を取り扱う企業のバイトエンジニア</li>
     </ul>
-    
+
     <h1>諸リンク</h1>
     <ul>
       <li><a href="https://twitter.com/_hu__hu">Twitter</a></li>
