--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
   <body>
     <h1>huu(hu__hu)について</h1>
     <ul>
-      <li>huu, hu__hu</li>
-      <li>平成8年12月2日生まれ</li>
       <li>情報工学科の大学生</li>
-      <li>機械学習系を取り扱う企業のバイトエンジニア</li>
+      <li>機械学習系の案件に携わるバイトエンジニアをやっています</li>
     </ul>
 
     <h1>諸リンク</h1>
     <ul>
+      <li><a href="mailto:kazehara@outlook.com">メール</a></li>
       <li><a href="https://twitter.com/_hu__hu">Twitter</a></li>
       <li><a href="http://huhu.hatenablog.com">ブログ</a></li>
       <li><a href="http://github.com/huu12">Github</a></li>
+      <br />
+      <li><a href="http://web.tuat.ac.jp/~tuatmcc">TUATMCC</a></li>
     </ul>
   </body>
 </html>
