--- a/index.html
+++ b/index.html
@@ -1,26 +1,63 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kazehara.com</title>
+    <link rel="stylesheet" href="css/awsm.css">
   </head>
 
   <body>
-    <h1>huu(hu__hu)について</h1>
-    <ul>
-      <li>情報工学科の大学生</li>
-      <li>機械学習系の案件に携わるバイトエンジニアをやっています</li>
-    </ul>
+    <header>
+      <h1>kazehara.com</h1>
+    </header>
 
-    <h1>諸リンク</h1>
-    <ul>
-      <li><a href="mailto:kazehara@outlook.com">メール</a></li>
-      <li><a href="https://twitter.com/_hu__hu">Twitter</a></li>
-      <li><a href="http://huhu.hatenablog.com">ブログ</a></li>
-      <li><a href="http://github.com/huu12">Github</a></li>
-      <br />
-      <li><a href="http://web.tuat.ac.jp/~tuatmcc">TUATMCC</a></li>
-    </ul>
+    <main>
+      <article>
+        <section>
+          <h2>About me</h2>
+          <p>huu, hu__hu, kazehara</p>
+          <p>Student at TUAT, Computer Science. Engineer at a certain company.</p>
+        </section>
+
+        <section>
+          <h2>Interest</h2>
+          <ul>
+            <li>Natural Language Processing</li>
+            <li>Image Processing, Image Recognition</li>
+            <li>Data Mining</li>
+            <li>Python, C++</li>
+            <li>Camera (Sony α7ii)</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Contact</h2>
+          <p>My e-mail address is here.</p>
+          <ul>
+            <li>kazehara@outlook.com</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Web services</h2>
+          <ul>
+            <li><a href="https://twitter.com/_hu__hu">Twitter</a></li>
+            <li>Facebook (Please ask me)</li>
+            <li><a href="https://github.com/huu12">GitHub</a></li>
+            <li><a href="https://www.instagram.com/kazehara12/">Instagram</a></li>
+            <li><a href="http://qiita.com/kazehara">Qiita</a></li>
+            <li><a href="http://huhu.hatenablog.com">Blog</a></li>
+            <li><a href="http://amzn.asia/fOzWF6K">Amazon Wish list</a></li>
+          </ul>
+        </section>
+      </article>
+    </main>
+
+    <footer>
+      <p>Powered by <a href="https://github.com/igoradamenko/awsm.css" title="awsm.css GitHub">awsm.css</a></p>
+      <p>(C) 2017 kazehara.com</p>
+    </footer>
   </body>
 </html>
