--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h2>Interest</h2>
           <ul>
             <li>Natural Language Processing</li>
-            <li>Image Processing, Image Recognition</li>
+            <li>Computer Vision</li>
             <li>Data Mining</li>
             <li>Python, C++</li>
             <li>Camera (Sony α7ii)</li>
