Add Flickr's link

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li><a href="https://www.instagram.com/kazehara12/">Instagram</a></li>
             <li><a href="http://qiita.com/kazehara">Qiita</a></li>
             <li><a href="http://huhu.hatenablog.com">Blog</a></li>
+            <li><a href="https://www.flickr.com/photos/153073706@N05/">Flickr</a></li>
             <li><a href="http://amzn.asia/fOzWF6K">Amazon Wish list</a></li>
           </ul>
         </section>
