--- a/index.html
+++ b/index.html
@@ -17,19 +17,25 @@
       <article>
         <section>
           <h2>About me</h2>
-          <p>huu, hu__hu, kazehara</p>
-          <p>Student at TUAT, Computer Science. Engineer at a certain company.</p>
+          <p>I'm a student at TUAT (Tokyo University of Agriculture and Technology).</p>
+          <p>I'm working at a certain company as an engineer.</p>
         </section>
 
         <section>
           <h2>Interest</h2>
           <ul>
             <li>Natural Language Processing</li>
-            <li>Computer Vision</li>
-            <li>Data Mining</li>
-            <li>Python, C++</li>
+            <li>Web developing (Super beginner)</li>
             <li>Camera (Sony α7ii)</li>
           </ul>
+        </section>
+
+        <section>
+          <h2>Skills</h2>
+          <ul>
+            <li>Frequentry used : Python</li>
+            <li>Beginner : C++, Go, JavaScript</li>
+          <ul>
         </section>
 
         <section>
@@ -43,13 +49,10 @@
         <section>
           <h2>Web services</h2>
           <ul>
-            <li><a href="https://twitter.com/_hu__hu">Twitter</a></li>
             <li>Facebook (Please ask me)</li>
-            <li><a href="https://github.com/huu12">GitHub</a></li>
+            <li><a href="https://github.com/kazehara">GitHub</a></li>
             <li><a href="https://www.instagram.com/kazehara12/">Instagram</a></li>
             <li><a href="http://qiita.com/kazehara">Qiita</a></li>
-            <li><a href="http://huhu.hatenablog.com">Blog</a></li>
-            <li><a href="https://www.flickr.com/photos/153073706@N05/">Flickr</a></li>
             <li><a href="http://amzn.asia/fOzWF6K">Amazon Wish list</a></li>
           </ul>
         </section>
