--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       <article>
         <section>
           <h2>About me</h2>
-          <p>I'm a student at TUAT (Tokyo University of Agriculture and Technology).</p>
+          <p>I'm a student at TUAT (Tokyo University of Agriculture and Technology), Dept. of computer science.</p>
           <p>I'm working at a certain company as an engineer.</p>
+          <p>I'm a member of Micro Computer Club (TUATMCC).</p>
         </section>
 
         <section>
