Add Medium link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h2>About me</h2>
           <p>I'm a student at TUAT (Tokyo University of Agriculture and Technology), Dept. of computer science.</p>
           <p>I'm working at a certain company as an engineer.</p>
-          <p>I'm a member of Micro Computer Club (TUATMCC).</p>
+          <p>I'm a senior member of Micro Computer Club (TUATMCC).</p>
         </section>
 
         <section>
@@ -55,6 +55,7 @@
             <li><a href="https://www.instagram.com/kazehara12/">Instagram</a></li>
             <li><a href="http://qiita.com/kazehara">Qiita</a></li>
             <li><a href="http://amzn.asia/fOzWF6K">Amazon Wish list</a></li>
+            <li><a href="https://medium.com/@kazehara12">Medium</a></li>
           </ul>
         </section>
       </article>
