--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
         </section>
 
         <section>
+          <h2>Works</h2>
+          <ul>
+            <li><a href="http://usagee.jp">Usagee, Inc.</a> 2015/05 - Now</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Internships</h2>
+          <ul>
+            <li><a href="https://wantedlyinc.com">Wantedly, Inc.</a> 2017/08 - 09</li>
+          </ul>
+        </section>
+
+        <section>
           <h2>Contact</h2>
           <p>My e-mail address is here.</p>
           <ul>
@@ -52,10 +66,10 @@
           <ul>
             <li>Facebook (Please ask me)</li>
             <li><a href="https://github.com/kazehara">GitHub</a></li>
+            <li><a href="https://medium.com/@kazehara12">Medium</a></li>
             <li><a href="https://www.instagram.com/kazehara12/">Instagram</a></li>
             <li><a href="http://qiita.com/kazehara">Qiita</a></li>
             <li><a href="http://amzn.asia/fOzWF6K">Amazon Wish list</a></li>
-            <li><a href="https://medium.com/@kazehara12">Medium</a></li>
           </ul>
         </section>
       </article>
