--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <section>
           <h2>About me</h2>
           <p>I'm a student at TUAT (Tokyo University of Agriculture and Technology), Dept. of computer science.</p>
+          <p>I belong to <a href="http://katfuji.lab.tuat.ac.jp">Katsuhide Fujita</a> Laboratory.</p>
         </section>
 
         <section>
