--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <h2>Works</h2>
           <ul>
             <li><a href="http://usagee.jp">Usagee, Inc.</a> 2015/05 - Now</li>
+            <li><a href="http://www.drecom.co.jp">Drecom, Inc.</a> 2018/05-2018/06</li>
           </ul>
         </section>
 
