--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul>
             <li>Natural Language Processing</li>
             <li>Web developing (Super beginner)</li>
-            <li>Camera (Sony α7ii)</li>
+            <li>Camera (Sony α6000)</li>
           </ul>
         </section>
 
@@ -35,13 +35,14 @@
           <ul>
             <li>Frequentry used : Python</li>
             <li>Beginner : C++, Go, JavaScript</li>
-          <ul>
+          </ul>
         </section>
 
         <section>
           <h2>Works</h2>
           <ul>
-            <li><a href="http://usagee.jp">Usagee, Inc.</a> 2015/05 - Now</li>
+            <li><a href="https://crowdworks.co.jp">CrowdWords, Inc.</a> 2018/10 - Now</li>
+            <li><a href="http://usagee.jp">Usagee, Inc.</a> 2015/05 - 2018/09</li>
             <li><a href="http://www.drecom.co.jp">Drecom, Inc.</a> 2018/05-2018/06</li>
           </ul>
         </section>
@@ -77,7 +78,7 @@
 
     <footer>
       <p>Powered by <a href="https://github.com/igoradamenko/awsm.css" title="awsm.css GitHub">awsm.css</a></p>
-      <p>(C) 2017 kazehara.com</p>
+      <p>(C) 2018 kazehara.com</p>
     </footer>
   </body>
 </html>
