--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section>
           <h2>Works</h2>
           <ul>
-            <li><a href="https://crowdworks.co.jp">CrowdWords, Inc.</a> 2018/10 - Now</li>
+            <li><a href="https://crowdworks.co.jp">CrowdWorks, Inc.</a> 2018/10 - Now</li>
             <li><a href="http://usagee.jp">Usagee, Inc.</a> 2015/05 - 2018/09</li>
             <li><a href="http://www.drecom.co.jp">Drecom, Inc.</a> 2018/05-2018/06</li>
           </ul>
