--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <article>
         <section>
           <h2>About me</h2>
+          <p>I'm Kazama Kentaro.</p>
           <p>I'm a student at TUAT (Tokyo University of Agriculture and Technology), Dept. of computer science.</p>
           <p>I belong to <a href="http://katfuji.lab.tuat.ac.jp">Katsuhide Fujita</a> Laboratory.</p>
         </section>
@@ -25,7 +26,7 @@
           <h2>Interest</h2>
           <ul>
             <li>Natural Language Processing</li>
-            <li>Web developing (Super beginner)</li>
+            <li>Web developing (Beginner)</li>
             <li>Camera (Sony α6000)</li>
           </ul>
         </section>
@@ -41,7 +42,7 @@
         <section>
           <h2>Works</h2>
           <ul>
-            <li><a href="https://crowdworks.co.jp">CrowdWorks, Inc.</a> 2018/10 - Now</li>
+            <li><a href="https://crowdworks.co.jp">CrowdWorks, Inc.</a> 2018/10 - 2019/04</li>
             <li><a href="http://usagee.jp">Usagee, Inc.</a> 2015/05 - 2018/09</li>
             <li><a href="http://www.drecom.co.jp">Drecom, Inc.</a> 2018/05-2018/06</li>
           </ul>
@@ -51,6 +52,18 @@
           <h2>Internships</h2>
           <ul>
             <li><a href="https://wantedlyinc.com">Wantedly, Inc.</a> 2017/08 - 09</li>
+            <li><a href="https://en.hust.edu.vn/">Hanoi University of Science and Technology</a> (At Vietnam) 2016/08 - 09</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Awards</h2>
+          <ul>
+            <li><a href="https://www.ipsj.or.jp/award/taikaigakusei.html">Student Award</a>, The 81st National Convention of IPSJ.
+              <ul>
+                <li><a href="http://kazehara.com/ipsj.pdf">A model of textual entailment utilizing latent dirichlet allocation</a></li>
+              </ul>              
+            </li>
           </ul>
         </section>
 
@@ -58,7 +71,7 @@
           <h2>Contact</h2>
           <p>My e-mail address is here.</p>
           <ul>
-            <li>kazehara@outlook.com</li>
+            <li>kazama [mark] katfuji.lab.tuat.ac.jp</li>
           </ul>
         </section>
 
