--- a/index.html
+++ b/index.html
@@ -4,86 +4,85 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kazehara.com</title>
+    <title>kazehara.github.io</title>
     <link rel="stylesheet" href="css/awsm.css">
   </head>
 
   <body>
     <header>
-      <h1>kazehara.com</h1>
+      <h1>Kazama Kentaro (風間 健太郎)</h1>
     </header>
 
     <main>
       <article>
         <section>
           <h2>About me</h2>
-          <p>I'm Kazama Kentaro.</p>
-          <p>I'm a student at TUAT (Tokyo University of Agriculture and Technology), Dept. of computer science.</p>
-          <p>I belong to <a href="http://katfuji.lab.tuat.ac.jp">Katsuhide Fujita</a> Laboratory.</p>
+          <p>東京農工大学 工学府 情報工学専攻 博士前期課程1年</p>
+          <p><a href="http://katfuji.lab.tuat.ac.jp">藤田桂英研究室</a> 所属</p>
         </section>
 
         <section>
-          <h2>Interest</h2>
+          <h2>興味</h2>
           <ul>
-            <li>Natural Language Processing</li>
-            <li>Web developing (Beginner)</li>
-            <li>Camera (Sony α6000)</li>
+            <li>自然言語処理</li>
+            <li>機械学習</li>
+            <li>バックエンド</li>
+            <li>フロントエンド</li>
           </ul>
         </section>
 
         <section>
-          <h2>Skills</h2>
+          <h2>学歴</h2>
           <ul>
-            <li>Frequentry used : Python</li>
-            <li>Beginner : C++, Go, JavaScript</li>
+            <li><a href="http://www.tuat.ac.jp/">東京農工大学</a> 工学府 情報工学専攻 2019/04-現在</li>
+            <li><a href="http://www.tuat.ac.jp/">東京農工大学</a> 工学部 情報工学科 2015/04-2019/03</li>
+            <li><a href="http://www.hst.titech.ac.jp/">東京工業大学附属科学技術高等学校</a> 情報システム分野 2012/04-2015/03</li>
           </ul>
         </section>
 
         <section>
-          <h2>Works</h2>
+          <h2>アルバイト</h2>
           <ul>
-            <li><a href="https://crowdworks.co.jp">CrowdWorks, Inc.</a> 2018/10 - 2019/04</li>
-            <li><a href="http://usagee.jp">Usagee, Inc.</a> 2015/05 - 2018/09</li>
-            <li><a href="http://www.drecom.co.jp">Drecom, Inc.</a> 2018/05-2018/06</li>
+            <li><a href="https://crowdworks.co.jp">株式会社クラウドワークス</a> 2018/10 - 2019/04</li>
+            <li><a href="http://usagee.jp">株式会社ウサギィ</a> 2015/05 - 2018/09</li>
+            <li><a href="http://www.drecom.co.jp">株式会社ドリコム</a> 2018/05-2018/06</li>
           </ul>
         </section>
 
         <section>
-          <h2>Internships</h2>
+          <h2>インターンシップ</h2>
           <ul>
-            <li><a href="https://wantedlyinc.com">Wantedly, Inc.</a> 2017/08 - 09</li>
-            <li><a href="https://en.hust.edu.vn/">Hanoi University of Science and Technology</a> (At Vietnam) 2016/08 - 09</li>
+            <li><a href="https://wantedlyinc.com">ウォンテッドリー株式会社</a> 2017/08 - 09</li>
+            <li><a href="https://en.hust.edu.vn/">ハノイ科学技術大学</a> (ベトナム) 2016/08 - 09</li>
           </ul>
         </section>
 
         <section>
-          <h2>Awards</h2>
+          <h2>受賞</h2>
           <ul>
-            <li><a href="https://www.ipsj.or.jp/award/taikaigakusei.html">Student Award</a>, The 81st National Convention of IPSJ.
+            <li>
+              <a href="https://www.ipsj.or.jp/award/taikaisyorei.html">大会奨励賞</a> 第81回情報処理学会全国大会
               <ul>
-                <li><a href="http://kazehara.com/ipsj.pdf">A model of textual entailment utilizing latent dirichlet allocation</a></li>
+                <li><a href="http://kazehara.github.io/papers/ipsj.pdf">潜在的ディリクレ配分法を用いたテキスト含意認識のモデル</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://www.ipsj.or.jp/award/taikaigakusei.html">学生奨励賞</a> 第81回情報処理学会全国大会
+              <ul>
+                <li><a href="http://kazehara.github.io/papers/ipsj.pdf">潜在的ディリクレ配分法を用いたテキスト含意認識のモデル</a></li>
               </ul>              
             </li>
           </ul>
         </section>
 
         <section>
-          <h2>Contact</h2>
-          <p>My e-mail address is here.</p>
-          <ul>
-            <li>kazama [mark] katfuji.lab.tuat.ac.jp</li>
-          </ul>
-        </section>
-
-        <section>
           <h2>Web services</h2>
           <ul>
-            <li>Facebook (Please ask me)</li>
+            <li>Facebook</li>
             <li><a href="https://github.com/kazehara">GitHub</a></li>
-            <li><a href="https://medium.com/@kazehara12">Medium</a></li>
+            <li><a href="https://dev.to/kazehara">Tech Blog (Dev.to)</a></li>
+            <li><a href="https://medium.com/@kazehara12">Diary (Medium)</a></li>
             <li><a href="https://www.instagram.com/kazehara12/">Instagram</a></li>
-            <li><a href="http://qiita.com/kazehara">Qiita</a></li>
-            <li><a href="http://amzn.asia/fOzWF6K">Amazon Wish list</a></li>
           </ul>
         </section>
       </article>
@@ -91,7 +90,7 @@
 
     <footer>
       <p>Powered by <a href="https://github.com/igoradamenko/awsm.css" title="awsm.css GitHub">awsm.css</a></p>
-      <p>(C) 2018 kazehara.com</p>
+      <p>(C) 2018 kazehara.github.io</p>
     </footer>
   </body>
 </html>
