--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <section>
           <h2>アルバイト</h2>
           <ul>
+            <li><a href="https://www.mynavi.jp/">株式会社マイナビ</a> 2019/07 - 現在</li>
             <li><a href="https://crowdworks.co.jp">株式会社クラウドワークス</a> 2018/10 - 2019/04</li>
             <li><a href="http://usagee.jp">株式会社ウサギィ</a> 2015/05 - 2018/09</li>
             <li><a href="http://www.drecom.co.jp">株式会社ドリコム</a> 2018/05-2018/06</li>
@@ -76,7 +77,7 @@
         </section>
 
         <section>
-          <h2>Web services</h2>
+          <h2>各種アカウント</h2>
           <ul>
             <li>Facebook</li>
             <li><a href="https://github.com/kazehara">GitHub</a></li>
