--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
       <article>
         <section>
           <h2>About me</h2>
-          <p>東京農工大学 工学府 情報工学専攻 博士前期課程1年</p>
+          <p>国立大学法人 東京農工大学 工学府 情報工学専攻 博士前期課程1年</p>
           <p><a href="http://katfuji.lab.tuat.ac.jp">藤田桂英研究室</a> 所属</p>
         </section>
 
         <section>
-          <h2>興味</h2>
+          <h2>専攻</h2>
           <ul>
             <li>自然言語処理</li>
+            <ul>
+              <li>テキスト含意認識 (Recognizing Textual Entailment; RTE)</li>
+              <li>噂検出 (Rumor Detection)</li>
+              <li>トピックモデル (Topic Model e.g. LDA)</li>
+            </ul>
             <li>機械学習</li>
-            <li>バックエンド</li>
-            <li>フロントエンド</li>
           </ul>
         </section>
 
@@ -43,7 +46,7 @@
         <section>
           <h2>アルバイト</h2>
           <ul>
-            <li><a href="https://www.mynavi.jp/">株式会社マイナビ</a> 2019/07 - 現在</li>
+            <li><a href="https://www.mynavi.jp/">株式会社マイナビ</a> 2019/07 - 2019/08</li>
             <li><a href="https://crowdworks.co.jp">株式会社クラウドワークス</a> 2018/10 - 2019/04</li>
             <li><a href="http://usagee.jp">株式会社ウサギィ</a> 2015/05 - 2018/09</li>
             <li><a href="http://www.drecom.co.jp">株式会社ドリコム</a> 2018/05-2018/06</li>
@@ -53,7 +56,7 @@
         <section>
           <h2>インターンシップ</h2>
           <ul>
-            <li><a href="https://jp.corp-sansan.com/">Sansan株式会社</a> 2019/08-2019/09 (To appear)</li>
+            <li><a href="https://jp.corp-sansan.com/">Sansan株式会社</a> 2019/08-2019/08</li>
             <li><a href="https://wantedlyinc.com">ウォンテッドリー株式会社</a> 2017/08 - 09</li>
             <li><a href="https://en.hust.edu.vn/">ハノイ科学技術大学</a> (ベトナム) 2016/08 - 09</li>
           </ul>
@@ -65,14 +68,14 @@
             <li>
               <a href="https://www.ipsj.or.jp/award/taikaisyorei.html">大会奨励賞</a> 第81回情報処理学会全国大会
               <ul>
-                <li><a href="http://kazehara.github.io/papers/ipsj.pdf">潜在的ディリクレ配分法を用いたテキスト含意認識のモデル</a></li>
+                <li><a href="https://www.ipsj.or.jp/award/9faeag0000004ej9-att/2U-08.pdf">潜在的ディリクレ配分法を用いたテキスト含意認識のモデル</a></li>
               </ul>
             </li>
             <li>
               <a href="https://www.ipsj.or.jp/award/taikaigakusei.html">学生奨励賞</a> 第81回情報処理学会全国大会
               <ul>
-                <li><a href="http://kazehara.github.io/papers/ipsj.pdf">潜在的ディリクレ配分法を用いたテキスト含意認識のモデル</a></li>
-              </ul>              
+                <li><a href="https://www.ipsj.or.jp/award/9faeag0000004ej9-att/2U-08.pdf">潜在的ディリクレ配分法を用いたテキスト含意認識のモデル</a></li>
+              </ul>
             </li>
           </ul>
         </section>
