--- a/index.html
+++ b/index.html
@@ -10,84 +10,89 @@
 
   <body>
     <header>
-      <h1>Kazama Kentaro (風間 健太郎)</h1>
+      <h1>KAZAMA Kentaro</h1>
     </header>
 
     <main>
       <article>
         <section>
           <h2>About me</h2>
-          <p>国立大学法人 東京農工大学 工学府 情報工学専攻 博士前期課程1年</p>
-          <p><a href="http://katfuji.lab.tuat.ac.jp">藤田桂英研究室</a> 所属</p>
+          <p>Tokyo University of Agriculture and Technology, Institute of Engineering, Department of Computer and Information Sciences, Master's 1st year.</p>
+          <p>I received bachelor's degree of engineering in computer and information sciences at March 2019.</p>
+          <p>Affiliated with <a href="http://katfuji.lab.tuat.ac.jp">Katsuhide Fujita Laboratory</a>.</p>
         </section>
 
         <section>
-          <h2>専攻</h2>
+          <h2>Major and Interest</h2>
           <ul>
-            <li>自然言語処理</li>
+            <li>Natural Language Processing</li>
             <ul>
-              <li>テキスト含意認識 (Recognizing Textual Entailment; RTE)</li>
-              <li>噂検出 (Rumor Detection)</li>
-              <li>トピックモデル (Topic Model e.g. LDA)</li>
+              <li>Recognizing Textual Entailment (RTE)</li>
+              <li>Rumor Detection and Verification</li>
+              <li>Fake News Detection</li>
+              <li>Neural Topic Modeling</li>
             </ul>
-            <li>機械学習</li>
+            <li>Machine Learning</li>
+            <ul>
+              <li>Variational Autoencoder (VAE)</li>
+              <li>Graph Convolutional Networks</li>
+            </ul>
+            <li>Probabilistic Programming</li>
           </ul>
         </section>
 
         <section>
-          <h2>学歴</h2>
+          <h2>Education</h2>
           <ul>
-            <li><a href="http://www.tuat.ac.jp/">東京農工大学</a> 工学府 情報工学専攻 2019/04-現在</li>
-            <li><a href="http://www.tuat.ac.jp/">東京農工大学</a> 工学部 情報工学科 2015/04-2019/03</li>
-            <li><a href="http://www.hst.titech.ac.jp/">東京工業大学附属科学技術高等学校</a> 情報システム分野 2012/04-2015/03</li>
+            <li><a href="http://www.tuat.ac.jp/">Tokyo University of Agriculture and Technology</a>, Institute of Engineering, Department of Computer and Information Sciences. 2019/04 - Now</li>
+
+            <li><a href="http://www.tuat.ac.jp">Tokyo University of Agriculture and Technology</a>, Faculty of Engineering, Department of Computer and Information Sciences. 2015/04 - 2019/03</li>
+            <li><a href="http://www.hst.titech.ac.jp/">Tokyo Tech High School of Science and Technology</a>. 2012/04 - 2015/03</li>
           </ul>
         </section>
 
         <section>
-          <h2>アルバイト</h2>
+          <h2>Internships</h2>
           <ul>
-            <li><a href="https://www.mynavi.jp/">株式会社マイナビ</a> 2019/07 - 2019/08</li>
-            <li><a href="https://crowdworks.co.jp">株式会社クラウドワークス</a> 2018/10 - 2019/04</li>
-            <li><a href="http://usagee.jp">株式会社ウサギィ</a> 2015/05 - 2018/09</li>
-            <li><a href="http://www.drecom.co.jp">株式会社ドリコム</a> 2018/05-2018/06</li>
+            <li><a href="https://jp.corp-sansan.com/">Sansan, Inc.</a> 2019/08 - 2019/08</li>
+            <li><a href="https://wantedlyinc.com">Wantedly, Inc.</a> 2017/08 - 09</li>
+            <li><a href="https://en.hust.edu.vn/">Hanoi University of Science and Technology.</a> (Vietnam) 2016/08 - 09</li>
           </ul>
         </section>
 
         <section>
-          <h2>インターンシップ</h2>
+          <h2>Publications</h2>
           <ul>
-            <li><a href="https://jp.corp-sansan.com/">Sansan株式会社</a> 2019/08-2019/08</li>
-            <li><a href="https://wantedlyinc.com">ウォンテッドリー株式会社</a> 2017/08 - 09</li>
-            <li><a href="https://en.hust.edu.vn/">ハノイ科学技術大学</a> (ベトナム) 2016/08 - 09</li>
+            <h3>Internal Conference (Japan)</h3>
+            <ul>
+              <li>2019/03, <a href="https://www.ipsj.or.jp/award/9faeag0000004ej9-att/2U-08.pdf">A Model of Textual Entailment Utilizing Latent Dirichlet Allocation</a>, The 81st National Convention of IPSJ.</li>
+            </ul>
           </ul>
         </section>
 
         <section>
-          <h2>受賞</h2>
+          <h2>Honors</h2>
           <ul>
             <li>
-              <a href="https://www.ipsj.or.jp/award/taikaisyorei.html">大会奨励賞</a> 第81回情報処理学会全国大会
+              2019/07, <a href="https://www.ipsj.or.jp/award/taikaisyorei.html">Best Paper Award for Young Researcher</a>, The 81st National Convention of IPSJ.
               <ul>
-                <li><a href="https://www.ipsj.or.jp/award/9faeag0000004ej9-att/2U-08.pdf">潜在的ディリクレ配分法を用いたテキスト含意認識のモデル</a></li>
+                <li><a href="https://www.ipsj.or.jp/award/9faeag0000004ej9-att/2U-08.pdf">A Model of Textual Entailment Utilizing Latent Dirichlet Allocation</a></li>
               </ul>
             </li>
             <li>
-              <a href="https://www.ipsj.or.jp/award/taikaigakusei.html">学生奨励賞</a> 第81回情報処理学会全国大会
+              2019/03, <a href="https://www.ipsj.or.jp/award/taikaigakusei.html">Student Encouragement Award</a>, The 81st National Convention of IPSJ.
               <ul>
-                <li><a href="https://www.ipsj.or.jp/award/9faeag0000004ej9-att/2U-08.pdf">潜在的ディリクレ配分法を用いたテキスト含意認識のモデル</a></li>
+                <li><a href="https://www.ipsj.or.jp/award/9faeag0000004ej9-att/2U-08.pdf">A Model of Textual Entailment Utilizing Latent Dirichlet Allocation</a></li>
               </ul>
             </li>
           </ul>
         </section>
 
         <section>
-          <h2>各種アカウント</h2>
+          <h2>Links</h2>
           <ul>
-            <li>Facebook</li>
             <li><a href="https://github.com/kazehara">GitHub</a></li>
-            <li><a href="https://dev.to/kazehara">Tech Blog (Dev.to)</a></li>
-            <li><a href="https://medium.com/@kazehara12">Diary (Medium)</a></li>
-            <li><a href="https://www.instagram.com/kazehara12/">Instagram</a></li>
+            <li><a href="https://dev.to/kazehara">Tech Blog</a></li>
           </ul>
         </section>
       </article>
